# ocw_oer_export

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-unittest.yml  weekly_csv_release.yml
ocw_oer_export/: __init__.py  cli.py  client.py  config.py  constants.py  create_csv.py  create_json.py  data_handler.py
ocw_oer_export/mapping_files/: fm_keywords_export.csv  ocw_topic_to_oer_subject.csv
ocw_oer_export/utilities/: __init__.py  delete_file.py  normalize_course_url.py  normalize_keywords.py  text_cleanup.py
private/output/: .gitkeep
tests/: expected_courses.csv  sample_courses.json  test_api_response.py  test_csv_creation_from_json.py  test_description_cleanup.py  test_keywords_normalization.py
