[tool.poetry]
name = "ocw_oer_export"
description = "A project to export MIT OpenCourseWare (OCW) courses' metadata to CSV format, compatible with OER Commons import requirements."
authors = ["MITODL"]
license = "BSD-3-Clause"
readme = "README.md"
version = "0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2023.11.17"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
decorator = "5.1.1"
distlib = "0.3.8"
filelock = "3.13.1"
identify = "2.5.35"
idna = "3.6"
importlib-metadata = "7.0.2"
Markdown = "3.6"
nodeenv = "1.8.0"
platformdirs = "4.2.0"
pre-commit = "3.6.2"
py = "1.11.0"
python-dotenv = "^1.0.1"
PyYAML = "6.0.1"
requests = "2.31.0"
retry = "0.9.2"
titlecase = "2.4.1"
tqdm = "4.66.2"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
zipp = "3.18.1"
