[tool.poetry]
name = "ocw_oer_export"
description = "A project to export MIT OpenCourseWare (OCW) courses' metadata to CSV format, compatible with OER Commons import requirements."
authors = ["MITODL"]
license = "BSD-3-Clause"
readme = "README.md"
version = "0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2023.11.17"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
decorator = "5.1.1"
distlib = "0.3.8"
filelock = "3.16.0"
identify = "2.6.0"
idna = "3.8"
importlib-metadata = "7.2.1"
Markdown = "3.7"
nodeenv = "1.9.1"
platformdirs = "4.2.2"
pre-commit = "3.8.0"
py = "1.11.0"
python-dotenv = "^1.0.1"
PyYAML = "6.0.2"
requests = "2.32.3"
retry = "0.9.2"
titlecase = "2.4.1"
tqdm = "4.66.5"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
zipp = "3.20.1"
