[metadata]
name = ocw_oer_export
version = 1.0.0
author = X
author_email = Y
description = A package to export MIT OpenCourseWare (OCW) courses metadata to CSV format, compatible with OER Commons import requirements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mitodl/ocw_oer_export
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.9.6
install_requires =
    requests>=2.31.0
    retry>=0.9.2
    tqdm>=4.66.1
    Markdown>=3.5.1
    pre-commit>=3.6.0

packages = find:

[options.entry_points]
console_scripts =
    ocw-oer-export = ocw_oer_export.cli:main

[options.package_data]
ocw_oer_export = mapping_files/*
